# c-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
WinDemo/: WinDemo.sln  WinDemo.vcxproj  WinDemo.vcxproj.filters
demo/: async_batch_demo.c  debug_demo.c  demo.c  demo_c++.cpp  http_client_demo.c
include/: thinkingdata.h
pcre/Release/: pcre_x64.lib
src/: async_batch_consumer.c  batch_consumer.c  debug_consumer.c  http_client.c  http_client.h  json.c  json.h  list.c  list.h  logging_consumer.c  td_async_batch_consumer.c  td_batch_consumer.c  td_debug_consumer.c  td_http_client.c  td_http_client.h  td_json.c  td_json.h  td_list.c  td_list.h  td_logger_consumer.c  td_util.c  td_util.h  thinkingdata.c  thinkingdata.h  thinkingdata_private.h  util.c  util.h
